// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dictionary file Arrow Table creates a Table from Arrow buffers 1`] = `"example-csv"`;

exports[`dictionary file Arrow Table creates a Table from Arrow buffers 2`] = `"Struct_"`;

exports[`dictionary file Arrow Table creates a Table from Arrow buffers 3`] = `3`;

exports[`dictionary file Arrow Table creates a Table from Arrow buffers 4`] = `
Array [
  "Hermione",
  25,
  Float32Array [
    -53.235599517822266,
    40.231998443603516,
  ],
]
`;

exports[`dictionary file Arrow Table creates a Table from Arrow buffers 5`] = `
Array [
  "Severus",
  30,
  Float32Array [
    -62.22999954223633,
    3,
  ],
]
`;

exports[`dictionary file Arrow Table creates a Table from Arrow buffers 6`] = `
Array [
  "Harry",
  20,
  Float32Array [
    23,
    -100.23652648925781,
  ],
]
`;

exports[`dictionary file Arrow Table enumerates Table rows 1`] = `
Object {
  "example-csv": Array [
    "Hermione",
    25,
    Float32Array [
      -53.235599517822266,
      40.231998443603516,
    ],
  ],
}
`;

exports[`dictionary file Arrow Table enumerates Table rows 2`] = `
Object {
  "example-csv": Array [
    "Severus",
    30,
    Float32Array [
      -62.22999954223633,
      3,
    ],
  ],
}
`;

exports[`dictionary file Arrow Table enumerates Table rows 3`] = `
Object {
  "example-csv": Array [
    "Harry",
    20,
    Float32Array [
      23,
      -100.23652648925781,
    ],
  ],
}
`;

exports[`dictionary file Arrow Table enumerates Table rows compact 1`] = `
Array [
  Array [
    "Hermione",
    25,
    Float32Array [
      -53.235599517822266,
      40.231998443603516,
    ],
  ],
]
`;

exports[`dictionary file Arrow Table enumerates Table rows compact 2`] = `
Array [
  Array [
    "Severus",
    30,
    Float32Array [
      -62.22999954223633,
      3,
    ],
  ],
]
`;

exports[`dictionary file Arrow Table enumerates Table rows compact 3`] = `
Array [
  Array [
    "Harry",
    20,
    Float32Array [
      23,
      -100.23652648925781,
    ],
  ],
]
`;

exports[`dictionary file Arrow Table toString() prints a pretty Table 1`] = `
"                                       example-csv
Hermione,25,-53.235599517822266,40.231998443603516
                   Severus,30,-62.22999954223633,3
                   Harry,20,23,-100.23652648925781"
`;

exports[`dictionary file Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`dictionary file Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,                                        example-csv
    0, Hermione,25,-53.235599517822266,40.231998443603516
    1,                    Severus,30,-62.22999954223633,3
    2,                    Harry,20,23,-100.23652648925781"
`;

exports[`dictionary stream Arrow Table creates a Table from Arrow buffers 1`] = `"example-csv"`;

exports[`dictionary stream Arrow Table creates a Table from Arrow buffers 2`] = `"Struct_"`;

exports[`dictionary stream Arrow Table creates a Table from Arrow buffers 3`] = `3`;

exports[`dictionary stream Arrow Table creates a Table from Arrow buffers 4`] = `
Array [
  "Hermione",
  25,
  Float32Array [
    -53.235599517822266,
    40.231998443603516,
  ],
]
`;

exports[`dictionary stream Arrow Table creates a Table from Arrow buffers 5`] = `
Array [
  "Severus",
  30,
  Float32Array [
    -62.22999954223633,
    3,
  ],
]
`;

exports[`dictionary stream Arrow Table creates a Table from Arrow buffers 6`] = `
Array [
  "Harry",
  20,
  Float32Array [
    23,
    -100.23652648925781,
  ],
]
`;

exports[`dictionary stream Arrow Table enumerates Table rows 1`] = `
Object {
  "example-csv": Array [
    "Hermione",
    25,
    Float32Array [
      -53.235599517822266,
      40.231998443603516,
    ],
  ],
}
`;

exports[`dictionary stream Arrow Table enumerates Table rows 2`] = `
Object {
  "example-csv": Array [
    "Severus",
    30,
    Float32Array [
      -62.22999954223633,
      3,
    ],
  ],
}
`;

exports[`dictionary stream Arrow Table enumerates Table rows 3`] = `
Object {
  "example-csv": Array [
    "Harry",
    20,
    Float32Array [
      23,
      -100.23652648925781,
    ],
  ],
}
`;

exports[`dictionary stream Arrow Table enumerates Table rows compact 1`] = `
Array [
  Array [
    "Hermione",
    25,
    Float32Array [
      -53.235599517822266,
      40.231998443603516,
    ],
  ],
]
`;

exports[`dictionary stream Arrow Table enumerates Table rows compact 2`] = `
Array [
  Array [
    "Severus",
    30,
    Float32Array [
      -62.22999954223633,
      3,
    ],
  ],
]
`;

exports[`dictionary stream Arrow Table enumerates Table rows compact 3`] = `
Array [
  Array [
    "Harry",
    20,
    Float32Array [
      23,
      -100.23652648925781,
    ],
  ],
]
`;

exports[`dictionary stream Arrow Table toString() prints a pretty Table 1`] = `
"                                       example-csv
Hermione,25,-53.235599517822266,40.231998443603516
                   Severus,30,-62.22999954223633,3
                   Harry,20,23,-100.23652648925781"
`;

exports[`dictionary stream Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`dictionary stream Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,                                        example-csv
    0, Hermione,25,-53.235599517822266,40.231998443603516
    1,                    Severus,30,-62.22999954223633,3
    2,                    Harry,20,23,-100.23652648925781"
`;

exports[`dictionary2 file Arrow Table creates a Table from Arrow buffers 1`] = `"struct"`;

exports[`dictionary2 file Arrow Table creates a Table from Arrow buffers 2`] = `"Struct_"`;

exports[`dictionary2 file Arrow Table creates a Table from Arrow buffers 3`] = `2`;

exports[`dictionary2 file Arrow Table creates a Table from Arrow buffers 4`] = `
Array [
  "a0fb47f9-f8fb-4403-a64a-786d7611f8ef",
  "Airbus",
  1502880750,
  Float32Array [
    32.45663833618164,
    1.8712350130081177,
  ],
]
`;

exports[`dictionary2 file Arrow Table creates a Table from Arrow buffers 5`] = `
Array [
  "50fb46f4-fefa-42c1-919c-0121974cdd00",
  "Boeing",
  1502880750,
  Float32Array [
    38.766666412353516,
    -4.181231498718262,
  ],
]
`;

exports[`dictionary2 file Arrow Table enumerates Table rows 1`] = `
Object {
  "struct": Array [
    "a0fb47f9-f8fb-4403-a64a-786d7611f8ef",
    "Airbus",
    1502880750,
    Float32Array [
      32.45663833618164,
      1.8712350130081177,
    ],
  ],
}
`;

exports[`dictionary2 file Arrow Table enumerates Table rows 2`] = `
Object {
  "struct": Array [
    "50fb46f4-fefa-42c1-919c-0121974cdd00",
    "Boeing",
    1502880750,
    Float32Array [
      38.766666412353516,
      -4.181231498718262,
    ],
  ],
}
`;

exports[`dictionary2 file Arrow Table enumerates Table rows compact 1`] = `
Array [
  Array [
    "a0fb47f9-f8fb-4403-a64a-786d7611f8ef",
    "Airbus",
    1502880750,
    Float32Array [
      32.45663833618164,
      1.8712350130081177,
    ],
  ],
]
`;

exports[`dictionary2 file Arrow Table enumerates Table rows compact 2`] = `
Array [
  Array [
    "50fb46f4-fefa-42c1-919c-0121974cdd00",
    "Boeing",
    1502880750,
    Float32Array [
      38.766666412353516,
      -4.181231498718262,
    ],
  ],
]
`;

exports[`dictionary2 file Arrow Table toString() prints a pretty Table 1`] = `
"                                                                                      struct
 a0fb47f9-f8fb-4403-a64a-786d7611f8ef,Airbus,1502880750,32.45663833618164,1.8712350130081177
50fb46f4-fefa-42c1-919c-0121974cdd00,Boeing,1502880750,38.766666412353516,-4.181231498718262"
`;

exports[`dictionary2 file Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`dictionary2 file Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,                                                                                       struct
    0,  a0fb47f9-f8fb-4403-a64a-786d7611f8ef,Airbus,1502880750,32.45663833618164,1.8712350130081177
    1, 50fb46f4-fefa-42c1-919c-0121974cdd00,Boeing,1502880750,38.766666412353516,-4.181231498718262"
`;

exports[`multi_dictionary file Arrow Table creates a Table from Arrow buffers 1`] = `"struct"`;

exports[`multi_dictionary file Arrow Table creates a Table from Arrow buffers 2`] = `"Struct_"`;

exports[`multi_dictionary file Arrow Table creates a Table from Arrow buffers 3`] = `2`;

exports[`multi_dictionary file Arrow Table creates a Table from Arrow buffers 4`] = `
Array [
  "a0fb47f9-f8fb-4403-a64a-786d7611f8ef",
  "12345",
  "Airbus",
  1502880750,
  Float32Array [
    32.45663833618164,
    1.8712350130081177,
  ],
]
`;

exports[`multi_dictionary file Arrow Table creates a Table from Arrow buffers 5`] = `
Array [
  "50fb46f4-fefa-42c1-919c-0121974cdd00",
  "67890",
  "Boeing",
  1502880750,
  Float32Array [
    38.766666412353516,
    -4.181231498718262,
  ],
]
`;

exports[`multi_dictionary file Arrow Table enumerates Table rows 1`] = `
Object {
  "struct": Array [
    "a0fb47f9-f8fb-4403-a64a-786d7611f8ef",
    "12345",
    "Airbus",
    1502880750,
    Float32Array [
      32.45663833618164,
      1.8712350130081177,
    ],
  ],
}
`;

exports[`multi_dictionary file Arrow Table enumerates Table rows 2`] = `
Object {
  "struct": Array [
    "50fb46f4-fefa-42c1-919c-0121974cdd00",
    "67890",
    "Boeing",
    1502880750,
    Float32Array [
      38.766666412353516,
      -4.181231498718262,
    ],
  ],
}
`;

exports[`multi_dictionary file Arrow Table enumerates Table rows compact 1`] = `
Array [
  Array [
    "a0fb47f9-f8fb-4403-a64a-786d7611f8ef",
    "12345",
    "Airbus",
    1502880750,
    Float32Array [
      32.45663833618164,
      1.8712350130081177,
    ],
  ],
]
`;

exports[`multi_dictionary file Arrow Table enumerates Table rows compact 2`] = `
Array [
  Array [
    "50fb46f4-fefa-42c1-919c-0121974cdd00",
    "67890",
    "Boeing",
    1502880750,
    Float32Array [
      38.766666412353516,
      -4.181231498718262,
    ],
  ],
]
`;

exports[`multi_dictionary file Arrow Table toString() prints a pretty Table 1`] = `
"                                                                                            struct
 a0fb47f9-f8fb-4403-a64a-786d7611f8ef,12345,Airbus,1502880750,32.45663833618164,1.8712350130081177
50fb46f4-fefa-42c1-919c-0121974cdd00,67890,Boeing,1502880750,38.766666412353516,-4.181231498718262"
`;

exports[`multi_dictionary file Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`multi_dictionary file Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,                                                                                             struct
    0,  a0fb47f9-f8fb-4403-a64a-786d7611f8ef,12345,Airbus,1502880750,32.45663833618164,1.8712350130081177
    1, 50fb46f4-fefa-42c1-919c-0121974cdd00,67890,Boeing,1502880750,38.766666412353516,-4.181231498718262"
`;

exports[`multipart count Arrow Table creates a Table from Arrow buffers 1`] = `"row_count"`;

exports[`multipart count Arrow Table creates a Table from Arrow buffers 2`] = `"Int"`;

exports[`multipart count Arrow Table creates a Table from Arrow buffers 3`] = `1`;

exports[`multipart count Arrow Table creates a Table from Arrow buffers 4`] = `10000`;

exports[`multipart count Arrow Table enumerates Table rows 1`] = `
Object {
  "row_count": 10000,
}
`;

exports[`multipart count Arrow Table enumerates Table rows compact 1`] = `
Array [
  10000,
]
`;

exports[`multipart count Arrow Table toString() prints a pretty Table 1`] = `
"row_count
    10000"
`;

exports[`multipart count Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`multipart count Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index, row_count
    0,     10000"
`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 1`] = `"origin_lat"`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 2`] = `"FloatingPoint"`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 3`] = `5`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 4`] = `35.393089294433594`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 5`] = `35.393089294433594`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 6`] = `35.393089294433594`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 7`] = `29.533695220947266`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 8`] = `29.533695220947266`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 9`] = `"origin_lon"`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 10`] = `"FloatingPoint"`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 11`] = `5`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 12`] = `-97.6007308959961`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 13`] = `-97.6007308959961`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 14`] = `-97.6007308959961`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 15`] = `-98.46977996826172`;

exports[`multipart latlong Arrow Table creates a Table from Arrow buffers 16`] = `-98.46977996826172`;

exports[`multipart latlong Arrow Table enumerates Table rows 1`] = `
Object {
  "origin_lat": 35.393089294433594,
  "origin_lon": -97.6007308959961,
}
`;

exports[`multipart latlong Arrow Table enumerates Table rows 2`] = `
Object {
  "origin_lat": 35.393089294433594,
  "origin_lon": -97.6007308959961,
}
`;

exports[`multipart latlong Arrow Table enumerates Table rows 3`] = `
Object {
  "origin_lat": 35.393089294433594,
  "origin_lon": -97.6007308959961,
}
`;

exports[`multipart latlong Arrow Table enumerates Table rows 4`] = `
Object {
  "origin_lat": 29.533695220947266,
  "origin_lon": -98.46977996826172,
}
`;

exports[`multipart latlong Arrow Table enumerates Table rows 5`] = `
Object {
  "origin_lat": 29.533695220947266,
  "origin_lon": -98.46977996826172,
}
`;

exports[`multipart latlong Arrow Table enumerates Table rows compact 1`] = `
Array [
  35.393089294433594,
  -97.6007308959961,
]
`;

exports[`multipart latlong Arrow Table enumerates Table rows compact 2`] = `
Array [
  35.393089294433594,
  -97.6007308959961,
]
`;

exports[`multipart latlong Arrow Table enumerates Table rows compact 3`] = `
Array [
  35.393089294433594,
  -97.6007308959961,
]
`;

exports[`multipart latlong Arrow Table enumerates Table rows compact 4`] = `
Array [
  29.533695220947266,
  -98.46977996826172,
]
`;

exports[`multipart latlong Arrow Table enumerates Table rows compact 5`] = `
Array [
  29.533695220947266,
  -98.46977996826172,
]
`;

exports[`multipart latlong Arrow Table toString() prints a pretty Table 1`] = `
"        origin_lat,         origin_lon
35.393089294433594,  -97.6007308959961
35.393089294433594,  -97.6007308959961
35.393089294433594,  -97.6007308959961
29.533695220947266, -98.46977996826172
29.533695220947266, -98.46977996826172"
`;

exports[`multipart latlong Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`multipart latlong Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,         origin_lat,         origin_lon
    0, 35.393089294433594,  -97.6007308959961
    1, 35.393089294433594,  -97.6007308959961
    2, 35.393089294433594,  -97.6007308959961
    3, 29.533695220947266, -98.46977996826172
    4, 29.533695220947266, -98.46977996826172"
`;

exports[`multipart origins Arrow Table creates a Table from Arrow buffers 1`] = `"origin_city"`;

exports[`multipart origins Arrow Table creates a Table from Arrow buffers 2`] = `"Utf8"`;

exports[`multipart origins Arrow Table creates a Table from Arrow buffers 3`] = `5`;

exports[`multipart origins Arrow Table creates a Table from Arrow buffers 4`] = `"Oklahoma City"`;

exports[`multipart origins Arrow Table creates a Table from Arrow buffers 5`] = `"Oklahoma City"`;

exports[`multipart origins Arrow Table creates a Table from Arrow buffers 6`] = `"Oklahoma City"`;

exports[`multipart origins Arrow Table creates a Table from Arrow buffers 7`] = `"San Antonio"`;

exports[`multipart origins Arrow Table creates a Table from Arrow buffers 8`] = `"San Antonio"`;

exports[`multipart origins Arrow Table enumerates Table rows 1`] = `
Object {
  "origin_city": "Oklahoma City",
}
`;

exports[`multipart origins Arrow Table enumerates Table rows 2`] = `
Object {
  "origin_city": "Oklahoma City",
}
`;

exports[`multipart origins Arrow Table enumerates Table rows 3`] = `
Object {
  "origin_city": "Oklahoma City",
}
`;

exports[`multipart origins Arrow Table enumerates Table rows 4`] = `
Object {
  "origin_city": "San Antonio",
}
`;

exports[`multipart origins Arrow Table enumerates Table rows 5`] = `
Object {
  "origin_city": "San Antonio",
}
`;

exports[`multipart origins Arrow Table enumerates Table rows compact 1`] = `
Array [
  "Oklahoma City",
]
`;

exports[`multipart origins Arrow Table enumerates Table rows compact 2`] = `
Array [
  "Oklahoma City",
]
`;

exports[`multipart origins Arrow Table enumerates Table rows compact 3`] = `
Array [
  "Oklahoma City",
]
`;

exports[`multipart origins Arrow Table enumerates Table rows compact 4`] = `
Array [
  "San Antonio",
]
`;

exports[`multipart origins Arrow Table enumerates Table rows compact 5`] = `
Array [
  "San Antonio",
]
`;

exports[`multipart origins Arrow Table toString() prints a pretty Table 1`] = `
"  origin_city
Oklahoma City
Oklahoma City
Oklahoma City
  San Antonio
  San Antonio"
`;

exports[`multipart origins Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`multipart origins Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,   origin_city
    0, Oklahoma City
    1, Oklahoma City
    2, Oklahoma City
    3,   San Antonio
    4,   San Antonio"
`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 1`] = `"foo"`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 2`] = `"Int"`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 3`] = `5`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 4`] = `1`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 5`] = `null`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 6`] = `3`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 7`] = `4`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 8`] = `5`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 9`] = `"bar"`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 10`] = `"FloatingPoint"`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 11`] = `5`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 12`] = `1`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 13`] = `null`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 14`] = `null`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 15`] = `4`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 16`] = `5`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 17`] = `"baz"`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 18`] = `"Utf8"`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 19`] = `5`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 20`] = `"aa"`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 21`] = `null`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 22`] = `null`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 23`] = `"bbb"`;

exports[`simple file Arrow Table creates a Table from Arrow buffers 24`] = `"cccc"`;

exports[`simple file Arrow Table enumerates Table rows 1`] = `
Object {
  "bar": 1,
  "baz": "aa",
  "foo": 1,
}
`;

exports[`simple file Arrow Table enumerates Table rows 2`] = `
Object {
  "bar": null,
  "baz": null,
  "foo": null,
}
`;

exports[`simple file Arrow Table enumerates Table rows 3`] = `
Object {
  "bar": null,
  "baz": null,
  "foo": 3,
}
`;

exports[`simple file Arrow Table enumerates Table rows 4`] = `
Object {
  "bar": 4,
  "baz": "bbb",
  "foo": 4,
}
`;

exports[`simple file Arrow Table enumerates Table rows 5`] = `
Object {
  "bar": 5,
  "baz": "cccc",
  "foo": 5,
}
`;

exports[`simple file Arrow Table enumerates Table rows compact 1`] = `
Array [
  1,
  1,
  "aa",
]
`;

exports[`simple file Arrow Table enumerates Table rows compact 2`] = `
Array [
  null,
  null,
  null,
]
`;

exports[`simple file Arrow Table enumerates Table rows compact 3`] = `
Array [
  3,
  null,
  null,
]
`;

exports[`simple file Arrow Table enumerates Table rows compact 4`] = `
Array [
  4,
  4,
  "bbb",
]
`;

exports[`simple file Arrow Table enumerates Table rows compact 5`] = `
Array [
  5,
  5,
  "cccc",
]
`;

exports[`simple file Arrow Table toString() prints a pretty Table 1`] = `
" foo,  bar,  baz
   1,    1,   aa
null, null, null
   3, null, null
   4,    4,  bbb
   5,    5, cccc"
`;

exports[`simple file Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`simple file Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,  foo,  bar,  baz
    0,    1,    1,   aa
    1, null, null, null
    2,    3, null, null
    3,    4,    4,  bbb
    4,    5,    5, cccc"
`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 1`] = `"foo"`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 2`] = `"Int"`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 3`] = `5`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 4`] = `1`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 5`] = `null`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 6`] = `3`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 7`] = `4`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 8`] = `5`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 9`] = `"bar"`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 10`] = `"FloatingPoint"`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 11`] = `5`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 12`] = `1`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 13`] = `null`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 14`] = `null`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 15`] = `4`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 16`] = `5`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 17`] = `"baz"`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 18`] = `"Utf8"`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 19`] = `5`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 20`] = `"aa"`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 21`] = `null`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 22`] = `null`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 23`] = `"bbb"`;

exports[`simple stream Arrow Table creates a Table from Arrow buffers 24`] = `"cccc"`;

exports[`simple stream Arrow Table enumerates Table rows 1`] = `
Object {
  "bar": 1,
  "baz": "aa",
  "foo": 1,
}
`;

exports[`simple stream Arrow Table enumerates Table rows 2`] = `
Object {
  "bar": null,
  "baz": null,
  "foo": null,
}
`;

exports[`simple stream Arrow Table enumerates Table rows 3`] = `
Object {
  "bar": null,
  "baz": null,
  "foo": 3,
}
`;

exports[`simple stream Arrow Table enumerates Table rows 4`] = `
Object {
  "bar": 4,
  "baz": "bbb",
  "foo": 4,
}
`;

exports[`simple stream Arrow Table enumerates Table rows 5`] = `
Object {
  "bar": 5,
  "baz": "cccc",
  "foo": 5,
}
`;

exports[`simple stream Arrow Table enumerates Table rows compact 1`] = `
Array [
  1,
  1,
  "aa",
]
`;

exports[`simple stream Arrow Table enumerates Table rows compact 2`] = `
Array [
  null,
  null,
  null,
]
`;

exports[`simple stream Arrow Table enumerates Table rows compact 3`] = `
Array [
  3,
  null,
  null,
]
`;

exports[`simple stream Arrow Table enumerates Table rows compact 4`] = `
Array [
  4,
  4,
  "bbb",
]
`;

exports[`simple stream Arrow Table enumerates Table rows compact 5`] = `
Array [
  5,
  5,
  "cccc",
]
`;

exports[`simple stream Arrow Table toString() prints a pretty Table 1`] = `
" foo,  bar,  baz
   1,    1,   aa
null, null, null
   3, null, null
   4,    4,  bbb
   5,    5, cccc"
`;

exports[`simple stream Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`simple stream Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,  foo,  bar,  baz
    0,    1,    1,   aa
    1, null, null, null
    2,    3, null, null
    3,    4,    4,  bbb
    4,    5,    5, cccc"
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 1`] = `"struct_nullable"`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 2`] = `"Struct_"`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 3`] = `17`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 4`] = `null`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 5`] = `
Array [
  null,
  "MhRNxD4",
]
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 6`] = `
Array [
  137773603,
  "3F9HBxK",
]
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 7`] = `
Array [
  410361374,
  "aVd88fp",
]
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 8`] = `null`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 9`] = `
Array [
  null,
  "3loZrRf",
]
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 10`] = `null`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 11`] = `null`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 12`] = `
Array [
  null,
  null,
]
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 13`] = `
Array [
  null,
  null,
]
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 14`] = `null`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 15`] = `
Array [
  null,
  "78SLiRw",
]
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 16`] = `null`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 17`] = `null`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 18`] = `
Array [
  null,
  "0ilsf82",
]
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 19`] = `
Array [
  null,
  "LjS9MbU",
]
`;

exports[`struct file Arrow Table creates a Table from Arrow buffers 20`] = `
Array [
  null,
  null,
]
`;

exports[`struct file Arrow Table enumerates Table rows 1`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct file Arrow Table enumerates Table rows 2`] = `
Object {
  "struct_nullable": Array [
    null,
    "MhRNxD4",
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows 3`] = `
Object {
  "struct_nullable": Array [
    137773603,
    "3F9HBxK",
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows 4`] = `
Object {
  "struct_nullable": Array [
    410361374,
    "aVd88fp",
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows 5`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct file Arrow Table enumerates Table rows 6`] = `
Object {
  "struct_nullable": Array [
    null,
    "3loZrRf",
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows 7`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct file Arrow Table enumerates Table rows 8`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct file Arrow Table enumerates Table rows 9`] = `
Object {
  "struct_nullable": Array [
    null,
    null,
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows 10`] = `
Object {
  "struct_nullable": Array [
    null,
    null,
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows 11`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct file Arrow Table enumerates Table rows 12`] = `
Object {
  "struct_nullable": Array [
    null,
    "78SLiRw",
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows 13`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct file Arrow Table enumerates Table rows 14`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct file Arrow Table enumerates Table rows 15`] = `
Object {
  "struct_nullable": Array [
    null,
    "0ilsf82",
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows 16`] = `
Object {
  "struct_nullable": Array [
    null,
    "LjS9MbU",
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows 17`] = `
Object {
  "struct_nullable": Array [
    null,
    null,
  ],
}
`;

exports[`struct file Arrow Table enumerates Table rows compact 1`] = `
Array [
  null,
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 2`] = `
Array [
  Array [
    null,
    "MhRNxD4",
  ],
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 3`] = `
Array [
  Array [
    137773603,
    "3F9HBxK",
  ],
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 4`] = `
Array [
  Array [
    410361374,
    "aVd88fp",
  ],
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 5`] = `
Array [
  null,
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 6`] = `
Array [
  Array [
    null,
    "3loZrRf",
  ],
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 7`] = `
Array [
  null,
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 8`] = `
Array [
  null,
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 9`] = `
Array [
  Array [
    null,
    null,
  ],
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 10`] = `
Array [
  Array [
    null,
    null,
  ],
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 11`] = `
Array [
  null,
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 12`] = `
Array [
  Array [
    null,
    "78SLiRw",
  ],
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 13`] = `
Array [
  null,
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 14`] = `
Array [
  null,
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 15`] = `
Array [
  Array [
    null,
    "0ilsf82",
  ],
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 16`] = `
Array [
  Array [
    null,
    "LjS9MbU",
  ],
]
`;

exports[`struct file Arrow Table enumerates Table rows compact 17`] = `
Array [
  Array [
    null,
    null,
  ],
]
`;

exports[`struct file Arrow Table toString() prints a pretty Table 1`] = `
"  struct_nullable
             null
         ,MhRNxD4
137773603,3F9HBxK
410361374,aVd88fp
             null
         ,3loZrRf
             null
             null
                ,
                ,
             null
         ,78SLiRw
             null
             null
         ,0ilsf82
         ,LjS9MbU
                ,"
`;

exports[`struct file Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`struct file Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,   struct_nullable
    0,              null
    1,          ,MhRNxD4
    2, 137773603,3F9HBxK
    3, 410361374,aVd88fp
    4,              null
    5,          ,3loZrRf
    6,              null
    7,              null
    8,                 ,
    9,                 ,
   10,              null
   11,          ,78SLiRw
   12,              null
   13,              null
   14,          ,0ilsf82
   15,          ,LjS9MbU
   16,                 ,"
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 1`] = `"struct_nullable"`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 2`] = `"Struct_"`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 3`] = `17`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 4`] = `null`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 5`] = `
Array [
  null,
  "MhRNxD4",
]
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 6`] = `
Array [
  137773603,
  "3F9HBxK",
]
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 7`] = `
Array [
  410361374,
  "aVd88fp",
]
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 8`] = `null`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 9`] = `
Array [
  null,
  "3loZrRf",
]
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 10`] = `null`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 11`] = `null`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 12`] = `
Array [
  null,
  null,
]
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 13`] = `
Array [
  null,
  null,
]
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 14`] = `null`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 15`] = `
Array [
  null,
  "78SLiRw",
]
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 16`] = `null`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 17`] = `null`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 18`] = `
Array [
  null,
  "0ilsf82",
]
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 19`] = `
Array [
  null,
  "LjS9MbU",
]
`;

exports[`struct stream Arrow Table creates a Table from Arrow buffers 20`] = `
Array [
  null,
  null,
]
`;

exports[`struct stream Arrow Table enumerates Table rows 1`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct stream Arrow Table enumerates Table rows 2`] = `
Object {
  "struct_nullable": Array [
    null,
    "MhRNxD4",
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows 3`] = `
Object {
  "struct_nullable": Array [
    137773603,
    "3F9HBxK",
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows 4`] = `
Object {
  "struct_nullable": Array [
    410361374,
    "aVd88fp",
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows 5`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct stream Arrow Table enumerates Table rows 6`] = `
Object {
  "struct_nullable": Array [
    null,
    "3loZrRf",
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows 7`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct stream Arrow Table enumerates Table rows 8`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct stream Arrow Table enumerates Table rows 9`] = `
Object {
  "struct_nullable": Array [
    null,
    null,
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows 10`] = `
Object {
  "struct_nullable": Array [
    null,
    null,
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows 11`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct stream Arrow Table enumerates Table rows 12`] = `
Object {
  "struct_nullable": Array [
    null,
    "78SLiRw",
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows 13`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct stream Arrow Table enumerates Table rows 14`] = `
Object {
  "struct_nullable": null,
}
`;

exports[`struct stream Arrow Table enumerates Table rows 15`] = `
Object {
  "struct_nullable": Array [
    null,
    "0ilsf82",
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows 16`] = `
Object {
  "struct_nullable": Array [
    null,
    "LjS9MbU",
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows 17`] = `
Object {
  "struct_nullable": Array [
    null,
    null,
  ],
}
`;

exports[`struct stream Arrow Table enumerates Table rows compact 1`] = `
Array [
  null,
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 2`] = `
Array [
  Array [
    null,
    "MhRNxD4",
  ],
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 3`] = `
Array [
  Array [
    137773603,
    "3F9HBxK",
  ],
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 4`] = `
Array [
  Array [
    410361374,
    "aVd88fp",
  ],
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 5`] = `
Array [
  null,
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 6`] = `
Array [
  Array [
    null,
    "3loZrRf",
  ],
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 7`] = `
Array [
  null,
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 8`] = `
Array [
  null,
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 9`] = `
Array [
  Array [
    null,
    null,
  ],
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 10`] = `
Array [
  Array [
    null,
    null,
  ],
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 11`] = `
Array [
  null,
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 12`] = `
Array [
  Array [
    null,
    "78SLiRw",
  ],
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 13`] = `
Array [
  null,
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 14`] = `
Array [
  null,
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 15`] = `
Array [
  Array [
    null,
    "0ilsf82",
  ],
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 16`] = `
Array [
  Array [
    null,
    "LjS9MbU",
  ],
]
`;

exports[`struct stream Arrow Table enumerates Table rows compact 17`] = `
Array [
  Array [
    null,
    null,
  ],
]
`;

exports[`struct stream Arrow Table toString() prints a pretty Table 1`] = `
"  struct_nullable
             null
         ,MhRNxD4
137773603,3F9HBxK
410361374,aVd88fp
             null
         ,3loZrRf
             null
             null
                ,
                ,
             null
         ,78SLiRw
             null
             null
         ,0ilsf82
         ,LjS9MbU
                ,"
`;

exports[`struct stream Arrow Table toString() prints an empty Table 1`] = `""`;

exports[`struct stream Arrow Table toString({ index: true }) prints a pretty Table with an Index column 1`] = `
"Index,   struct_nullable
    0,              null
    1,          ,MhRNxD4
    2, 137773603,3F9HBxK
    3, 410361374,aVd88fp
    4,              null
    5,          ,3loZrRf
    6,              null
    7,              null
    8,                 ,
    9,                 ,
   10,              null
   11,          ,78SLiRw
   12,              null
   13,              null
   14,          ,0ilsf82
   15,          ,LjS9MbU
   16,                 ,"
`;
